infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: ingress-srv
    annotations:
        kubernetes.io/ingress.class: nginx
        nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
    rules:
        - host: xsocial.dev
          http:
              paths:
                  - path: /api/?(.*)
                    pathType: ImplementationSpecific
                    backend:
                        service:
                            name: api-gateway-srv
                            port:
                                number: 3000
                  - path: /?(.*)
                    pathType: ImplementationSpecific
                    backend:
                        service:
                            name: client-srv
                            port:
                                number: 3000
